[package]
name = "wkb"
version = "0.8.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/wkb"
description = "Fast, pure-Rust reader and writer for Well-Known Binary geometries"
categories = ["science::geo"]
# 1.82 is the minimum version for `impl GeometryTrait + use<'_>` in `read_wkb`
# https://rust-lang.github.io/rfcs/3617-precise-capturing.html
rust-version = "1.82"

[features]
default = ["geos"]
geos = ["dep:geos"]

[dependencies]
byteorder = "1"
geo-traits = "0.2"
geo-types = "0.7.16"
geo-traits-ext = { git = "https://github.com/wherobots/geo", branch = "generic-alg", package = "geo-traits-ext" }
num_enum = "0.7"
thiserror = "1"
geos = { version = "10", features = ["geo", "v3_10_0"], optional = true}

[dev-dependencies]
approx = "0.5.1"
bytes = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }
geo-generic-alg = { git = "https://github.com/wherobots/geo", branch = "generic-alg", package = "geo-generic-alg" }
geos = { version = "10", features = ["geo", "v3_10_0"] }
wkt = "0.13"

[[bench]]
name = "parse"
harness = false

[lib]
doctest = true

[patch.crates-io]
geo-traits = { git = "https://github.com/wherobots/geo", branch = "generic-alg", package = "geo-traits" }
geo-types = { git = "https://github.com/wherobots/geo", branch = "generic-alg", package = "geo-types" }
geo-traits-ext = { git = "https://github.com/wherobots/geo", branch = "generic-alg", package = "geo-traits-ext" }
wkt = { git = "https://github.com/wherobots/wkt", branch = "generic-alg" }
